fix: Backend Login Fehler gefixt und Pagination Limit erhöht

--- a/.extras/compose/fakesmtp/compose.yml
+++ b/.extras/compose/fakesmtp/compose.yml
@@ -32,7 +32,7 @@ services:
       #  protocol: tcp
     volumes:
       - type: bind
-        source: C:/Zimmermann/volumes/fakesmtp
+        source: /Users/swe/Zimmermann/volumes/fakesmtp
         target: /tmp
     environment:
       TZ: Europe/Berlin
