Letzte Probleme mit Docker, Login und Tests behoben
- CSV-Import und Datenbank-Crash gefixt
- Keycloak-Verbindung und Berechtigungen korrigiert
- Nginx HTTPS Proxy eingerichtet
- E2E-Tests für Docker angepasst und Linting gefixt

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "format:check": "prettier --check \"src/**/*.{ts,tsx,css}\"",
     "typecheck": "tsc --noEmit",
     "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui"
+    "test:e2e:ui": "playwright test --ui",
+    "test:docker": "PLAYWRIGHT_BASE_URL=https://localhost playwright test"
   },
   "dependencies": {
     "@apollo/client": "4.0.11",
