--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "typecheck": "tsc --noEmit",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
-    "test:docker": "PLAYWRIGHT_BASE_URL=https://localhost playwright test"
+    "test:docker": "PLAYWRIGHT_BASE_URL=https://localhost playwright test",
+    "test:unit": "vitest run",
+    "test:unit:watch": "vitest"
   },
   "dependencies": {
     "@apollo/client": "4.0.11",
@@ -29,6 +31,8 @@
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "@playwright/test": "1.57.0",
+    "@testing-library/jest-dom": "6.9.1",
+    "@testing-library/react": "16.3.1",
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
@@ -38,11 +42,13 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.26",
     "globals": "^17.0.0",
+    "jsdom": "27.4.0",
     "prettier": "3.7.4",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.51.0",
     "vite": "^7.3.0",
-    "vite-plugin-mkcert": "1.17.9"
+    "vite-plugin-mkcert": "1.17.9",
+    "vitest": "4.0.10"
   },
   "engines": {
     "node": ">=20.0.0",
