--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,9 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+  schedule:
+    # Jeden Tag um 8:00 Uhr UTC (= 9:00 Uhr MEZ)
+    - cron: '0 8 * * *'
 
 jobs:
   lint-and-build:
